# Bjornulf_custom_nodes

./: .gitignore  API_civitai.py  API_openai.py  README.md  __init__.py  audio_preview.py  audio_video_sync.py  combine_background_overlay.py  combine_images.py  combine_texts.py  ffmpeg_concat_videos.py  ffmpeg_configuration.py  ffmpeg_convert.py  ffmpeg_images_to_video.py  ffmpeg_images_to_video_path.py  free_vram_hack.py  global_seed_manager.py  global_variables.py  hugginface_download.py  if_else.py  images_compare.py  latent_resolution_selector.py  line_selector.py  list_selector.py  load_images_from_folder.py  load_text.py  loader_lora_with_path.py  loop_sequential_integer.py  loop_upscale_model_selector.py  lora_stacks.py  masks_nodes.py  model_clip_vae_selector.py  note_image.py  note_text.py  ollama_image_vision.py  ollama_talk.py  openai_nodes.py  pause_resume_stop.py  pick_input.py  play_sound.py  (+23 more)
.github/workflows/: publish.yml
civitai/: parsed_lora_hunyuan_video_loras.json
web/js/: images_compare.js  note_image.js  ollama_talk.js  tts_config.js  video_preview.js  write_pickme_chain.js
workflows/: HUNYUAN_basic_lora.json
